syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (Product) {}
  rpc CreateProduct (CreateProductRequest) returns (Product) {}
  rpc UpdateProduct (UpdateProductRequest) returns (Product) {}
  rpc DeleteProduct (DeleteProductRequest) returns (Product) {}
}

message GetProductRequest {
  int32 id = 1;
}

message CreateProductRequest {
  string name = 1;
  float price = 2;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  float price = 3;
}

message DeleteProductRequest {
  int32 id = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;
}